--- a/README.rdoc
+++ b/README.rdoc
@@ -13,5 +13,15 @@ open config/initializers/editor.rb and add model names you want to use editor in
 editor built on active admin, so you have to add active_admin.css and active_admin.js into assets precompile path if you didn't already!
 
 == Update from 0.0.1
-remove editor_active_admin.rb from config/initializers
-remove ace/ace.js ace/mode-html.js ace/theme-tomorrow_night.js from assets precompile path
+remove below file from config/initializers
+* editor_active_admin.rb 
+
+remove below lines from assets precompile path
+* ace/ace.js 
+* ace/mode-html.js 
+* ace/theme-tomorrow_night.js
+
+add below lines into assets precompile path
+* tinymce/themes/advanced/skins/cirkuit/ui.css 
+* tinymce/themes/advanced/skins/cirkuit/content.css 
+* tinymce/themes/advanced/skins/cirkuit/dialog.css
